samples/_failures_safe/1761005715_250ea5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68f67bfb.c: In function ‘main’:
./samples/SAFE/__tmp_68f67bfb.c:158:16: error: missing terminating " character
  158 |         printf("
      |                ^
./samples/SAFE/__tmp_68f67bfb.c:158:9: error: expected expression at end of input
  158 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_68f67bfb.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_68f67bfb.c:158:9: error: expected declaration or statement at end of input
